tool/src/cpp/snapshots/diplomat_tool__cpp__conversions__tests__enum_conversion@Foo.hpp.snap
---
source: tool/src/cpp/conversions.rs
expression: out_texts.get(out).unwrap()

---
#ifndef Foo_HPP
#define Foo_HPP
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <algorithm>
#include <memory>
#include <variant>
#include <optional>
#include "diplomat_runtime.hpp"

namespace capi {
#include "Foo.h"
}

struct MyStruct;

/**
 * A destruction policy for using Foo with std::unique_ptr.
 */
struct FooDeleter {
  void operator()(capi::Foo* l) const noexcept {
    capi::Foo_destroy(l);
  }
};
class Foo {
 public:
  MyStruct get_struct() const;
  inline const capi::Foo* AsFFI() const { return this->inner.get(); }
  inline capi::Foo* AsFFIMut() { return this->inner.get(); }
  inline Foo(capi::Foo* i) : inner(i) {}
  Foo() = default;
  Foo(Foo&&) noexcept = default;
  Foo& operator=(Foo&& other) noexcept = default;
 private:
  std::unique_ptr<capi::Foo, FooDeleter> inner;
};

#include "MyStruct.hpp"

inline MyStruct Foo::get_struct() const {
  capi::MyStruct diplomat_raw_struct_out_value = capi::Foo_get_struct(this->inner.get());
  return MyStruct{ .a = std::move(diplomat_raw_struct_out_value.a), .b = std::move(static_cast<MyEnum>(diplomat_raw_struct_out_value.b)) };
}
#endif

